<resources>
    <string name="app_name">Sakan</string>
    <string name="start_ar">ابدأ</string>
    <string name="login_ar">هل تريد التسجيل؟ دخول</string>
    <string name="app_name_ar">سكن</string>
    <string name="start">Start</string>
    <string name="login_title">Do you have account? </string>
    <string name="login">Login</string>
    <string name="account_type_text">Choose Account Type</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="pass_error">Password length at least 6 characters</string>
    <string name="confirm_pass_error">Password and confirm password don\'t match</string>
    <string name="recover_pass">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_rented">Hello rented /n please fill out the form below to get started</string>
    <string name="sign_up_tenant">Hello tenant /n please fill out the form below to get started</string>
    <string name="tenant">Tenant</string>
    <string name="rented">Rented</string>
    <string name="login_text">Login</string>
    <string name="sign_up_2">تسجيل دخول</string>
    <string name="add_home_images">Add Home Images</string>
    <string name="location">Detailed address</string>
    <!--<string name="account_type">نوع الحساب</string>-->
    <string name="account_type">Account type</string>
    <!-- <string name="rented_name">اسم المعلن/الشركة</string>-->
    <string name="rented_name">Rented name/ company name</string>
    <string name="sign_up_3">تسجيل عضوية جديدة</string>
    <string name="sign_up_by">Or</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_google">Google</string>
    <string name="sign_up_text">Sign up</string>
    <string name="sign_up_title">Don\'t have account? </string>

    <string name="facebook_app_id">720037558837958</string>
    <string name="fb_login_protocol_scheme">fb720037558837958</string>

    <string name="المحافظة">المحافظة</string>
    <string name="المنطقة">المنطقة</string>
    <string name="أقل">أقل سعر</string>
    <string name="أعلى">أعلى سعر</string>
    <string name="العقار">نوع العقار</string>
    <string name="contract_type_ar">نوع العقد</string>
    <string name="contract_type">Contract Type</string>
    <string name="الغرف">عدد الغرف</string>
    <string name="ابحث">ابحث</string>

    <string name="title">Title</string>
    <string name="area">Area</string>
    <string name="price">Price</string>
    <string name="rooms_num">Rooms Num</string>
    <string name="bathroom_num">Bathroom Num</string>
    <string name="upload">Upload Post</string>
    <string name="desc">Description</string>
    <string name="home_type">Home Type</string>
</resources>