<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#2222"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/center_guide_line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:fontFamily="@font/font3"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/center_guide_line" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_80sdp"
        android:background="@drawable/round_button"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/login_title"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/login_title"
        app:layout_goneMarginStart="@dimen/_100sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>