<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />


    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login_text"
        android:textColor="@color/davygrey"
        android:textSize="@dimen/_22ssp"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:background="@drawable/bac_edit"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12sdp"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:textColor="@color/davygrey"
        android:textColorHint="@color/manatee_1"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/login_text" />

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bac_edit"
        android:drawableEnd="@drawable/hide_pass"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"
        android:textColor="@color/davygrey"
        android:textColorHint="@color/manatee"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/email_edit" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_42sdp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_end"
        app:layout_constraintStart_toStartOf="@id/guide_line_start"
        app:layout_constraintTop_toBottomOf="@id/pass_edit" />

    <TextView
        android:id="@+id/pass_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/cairo_bold"
        android:gravity="center"
        android:text="Forget password? Recovery"
        android:textColor="@color/davygrey"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/guide_line_end"
        app:layout_constraintTop_toBottomOf="@id/button_login" />


    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="دخول بواسطة"
        android:textColor="@color/davygrey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_forget" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:background="@color/silver"
        app:layout_constraintEnd_toStartOf="@id/txt_login"
        app:layout_constraintStart_toEndOf="@id/guide_line_start"
        app:layout_constraintTop_toTopOf="@id/txt_login" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@color/silver"
        app:layout_constraintEnd_toStartOf="@id/guide_line_end"
        app:layout_constraintStart_toEndOf="@id/txt_login"
        app:layout_constraintTop_toTopOf="@id/txt_login" />

    <LinearLayout
        android:id="@+id/other_login_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide_line_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login">

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_3sdp"
            android:layout_weight="1">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_fb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <Button
                android:id="@+id/fb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bac_facebook"
                android:drawableStart="@drawable/com_facebook_button_icon"
                android:gravity="center"
                android:paddingStart="@dimen/_22sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </FrameLayout>

        <Button
            android:id="@+id/google_sign_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:background="@drawable/bac_google"
            android:drawableStart="@drawable/googleg_standard_color_18"
            android:gravity="center"
            android:paddingStart="@dimen/_22sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="@color/davygrey"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/sign_up_title"
        android:textColor="@color/manatee_1"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/sign_up_text"
        android:textColor="@color/davygrey"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/sign_up_title"
        app:layout_goneMarginStart="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>